# When-Algorithms-Meet-Artists

./: .gitignore  .mcp.json  README.md  pyproject.toml  pyrightconfig.json
data/: README.md  artist_perspectives.csv  likert_anchor_phrases.csv  public_discourse_clean_chunks.csv  public_probes.csv  public_probes_keyword.csv
notebooks/: 01_preprocessing.ipynb  02_main_analysis.ipynb  03_consensus_umap_details.ipynb  frame_analysis.py
scripts/: build_figure_cache.py  cluster_labeling_configC.py  compare_llm_validation_approaches.py  compare_probe_methods.py  extract_public_probes.py  extract_public_probes_embedding.py  final_pipeline.py  full_pipeline_comparison.py  generate_figure1_variants.py  generate_pca_manuscript_figure.py  mlp_sensitivity.py  pca_vs_umap_2d_comparison.py  regenerate_all_figures.py  regenerate_bar_figures.py  regenerate_figure_1.py  regenerate_figure_1_labeled.py  regenerate_figure_2.py  regenerate_figure_3_only.py  regenerate_figure_4.py  regenerate_figure_s1.py  regenerate_figure_s2.py  regenerate_figure_s2_density.py  regenerate_s3_s4_only.py  run_approach_f_multilabel.py  three_way_pca_comparison.py  validate_free_text.py  validate_probe_themes_llm.py
src/: __init__.py  analysis.py  cluster_quality.py  clustering.py  compression_metrics.py  consensus_umap.py  data_loading.py  data_validation.py  embeddings.py  hyperparameter_selection.py  models.py  projection.py  public_probes.py  text_processing.py  visualization.py
supplementary/: README.md  consensus_umap_implementation.md  table_S1_search_queries.md  table_S2_full_topic_inventory.md  table_S3_likert_design_matrix.md
tests/: conftest.py  test_analysis.py  test_clustering.py  test_compression_metrics.py  test_consensus_umap.py  test_corpus_split.py  test_data_loading.py  test_data_validation.py  test_e2e.py  test_embeddings.py  test_models.py  test_public_probes.py
trace_logs/: README.md  build_summary.py  (+1 more)
(+119 files in other folders)
